quick fix to sidebar panel scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -60,10 +60,14 @@ LEFT SIDEBAR
   top:0px;
   bottom:0px;
   left:0px;
-  direction: ltr;
+  direction: rtl;
 
   background-color:rgba(255, 255, 255, 0.6);
   box-shadow: black 0.5em 0.0em 0.5em;
+}
+
+#sidebar-left-inside {
+  direction: ltr;
 }
 
 #sidebar-left-panel.closed {
